[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.4_Bazoka/P.4_Bazoka.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.4_Bazoka/Modelo/bazoka.dae" type="PackedScene" id=2]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.4_Bazoka/Sonido/Carga_Arma_by_Cyclo_Pi_Studio.wav" type="AudioStream" id=3]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.4_Bazoka/Sonido/Disparo_by_Cyclo_Pi_tudio.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.487973, 0.101642, 0.0905033 )

[node name="P4_Bazoka" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Scene Root" parent="." index="0" instance=ExtResource( 2 )]

[node name="Area" type="Area" parent="." index="1"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Audio Bus", "Collision", "Pause", "Reverb Bus", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.524174, -0.0111389, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="Audio_carga_arma" type="AudioStreamPlayer3D" parent="." index="2"]

stream = ExtResource( 3 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="Audio_disparo" type="AudioStreamPlayer3D" parent="." index="3"]

stream = ExtResource( 4 )
attenuation_model = 0
unit_db = 0.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]


